--- a/contact-form-thank-you.html
+++ b/contact-form-thank-you.html
@@ -6,24 +6,43 @@
 h1
 {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 16px;
+	font-size : 24px;
     font-weight : bold;
+	
 }
 label,a,body
 {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px; 
+	font-size : 16px; 
 }
-
+div.container{
+  border-radius: 5px;
+  
+  padding: 20px;
+  width: 50%;
+  margin-left: 600px;
+  margin-top: 80px;
+}
+img{
+	width: 400px;
+	height: auto;
+	margin-top: 4px;
+	margin-bottom: 20px;
+	
+}
 </style>	
 <!-- a helper script for vaidating the form-->
 </head>	
 </head>
 
 <body>
-<h1>Thank you!</h1>
-Thank you for submitting the form. We will contact you soon!
+	<div class="container">
+		<h1>Thank you!</h1>
+		<img src="img/success.svg" alt=""><br>
+		
+		<span>Thank you for submitting the form. We will contact you soon!</span>
 
+	</div>
 
 </body>
 </html>
