--- a/contact-form-thank-you.html
+++ b/contact-form-thank-you.html
@@ -16,12 +16,12 @@ label,a,body
 	font-size : 16px; 
 }
 div.container{
-  border-radius: 5px;
-  
-  padding: 20px;
-  width: 50%;
-  margin-left: 600px;
-  margin-top: 80px;
+	border-radius: 5px;
+	
+	padding: 20px;
+	width: 50%;
+	margin-left: 600px;
+	margin-top: 80px;
 }
 img{
 	width: 400px;
@@ -29,6 +29,21 @@ img{
 	margin-top: 4px;
 	margin-bottom: 20px;
 	
+}
+a:link, a:visited{
+	
+	background-color: #167aec;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+
+	border-radius: 4px;
+	cursor: pointer;
+	text-decoration: none;
+	
+}
+a:hover, a:active{
+	background-color: #072b55;
 }
 </style>	
 <!-- a helper script for vaidating the form-->
@@ -41,7 +56,7 @@ img{
 		<img src="img/success.svg" alt=""><br>
 		
 		<span>Thank you for submitting the form. We will contact you soon!</span>
-
+		<a href="contact-form.php">Back to form</a>
 	</div>
 
 </body>
